Start on entity create/edit forms universal schema cache

--- a/modules/admin_ui/templates/admin_entity_create.html
+++ b/modules/admin_ui/templates/admin_entity_create.html
@@ -1,95 +1,7 @@
-[[[file admin_include_ckeditor]]]
+[[[file admin_include_ckeditor]]] 
+
 [[[file admin_include_jsonform]]]
 
-<h1></h1>
+<h1>Create new {{type}}</h1> 
 
-<form></form>
-
-
-<script>
-  $(document).ready(function() {
-
-    var type = document.location.pathname.split("/")[document.location.pathname.split("/").length - 1];
-
-    $("h1").text("Create " + type);
-
-    var urlparts = document.location.pathname.split("/");
-
-    window.type = urlparts[urlparts.length - 1];
-
-    $.get('/admin/api/create/' + window.type + "/form").done(function(data) {
-
-      data.onSubmit = function(errors, values) {
-
-        if (errors) {
-
-          console.error(errors);
-
-        } else {
-
-          values.credentials = {
-            "apikey": "letmein",
-            "secretkey": "letmein"
-          };
-
-          $.post("/entity/create/" + type, values, function(data, err) {
-
-            document.location.href = "/admin/entitylist/" + type;
-
-          })
-
-        }
-      };
-
-      JSONForm.elementTypes['fileField'] = Object.create(JSONForm.elementTypes['text']);
-      //        JSONForm.elementTypes['fileField'].template = '<select value="<%= escape(value) %>" name="<%= node.name %>" onchange="chooseField(event)" class="field-collection-select form-control"></select>';
-      JSONForm.elementTypes['fileField'].template = "<input type='hidden' name='<%= node.name %>' value='<%= escape(value) %>'><input type='file' id='input' onchange='handleFiles(this.files[0], <%= node.name %>)'>";
-
-      window.handleFiles = function(file, inputname) {
-        var uri = "/admin/file/fileFieldUpload";
-        var xhr = new XMLHttpRequest();
-        var fd = new FormData();
-
-        xhr.open("POST", uri, true);
-        xhr.onreadystatechange = function() {
-          if (xhr.readyState == 4 && xhr.status == 200) {
-
-            // Handle response.
-
-            $(inputname).val(xhr.responseText) // handle response.
-
-          }
-        };
-        fd.append('myFile', file);
-        // Initiate a multipart/form-data upload
-        xhr.send(fd);
-      }
-
-      $('form').jsonForm(data);
-
-      $("textarea").each(function() {
-        CKEDITOR.replace(this, {
-
-          filebrowserUploadUrl: '/admin/file/upload'
-
-        });
-      });
-
-      for (var i in CKEDITOR.instances) {
-
-        CKEDITOR.instances[i].on('change', function(e) {
-
-          var data = e.editor.getData();
-
-          $(e.editor.element)[0].$.innerHTML = data;
-
-        });
-
-      };
-
-    })
-  });
-
-</script>
-
-
+[[[form createEntity,{{type}}]]]
