--- a/modules/admin_ui/templates/admin_entitylist.html
+++ b/modules/admin_ui/templates/admin_entitylist.html
@@ -12,10 +12,10 @@
     <br />
 
     <tr>
-      <td>{{#if path}}<a href="{{path}}">{{_id}}</a>{{else}}{{_id}}{{/if}}</td>
+      <td>{{#if path}}<a href="{{path}}">{{eId}}</a>{{else}}{{eId}}{{/if}}</td>
       <td>{{title}}</td>
-      <td><a href="/admin/edit/{{ entityType }}/{{ _id }}">Edit</a></td>
-      <td><a href="/admin/delete/{{ entityType }}/{{ _id }}">Delete</a></td>
+      <td><a href="/admin/edit/{{ entityType }}/{{ eId }}">Edit</a></td>
+      <td><a href="/admin/delete/{{ entityType }}/{{ eId }}">Delete</a></td>
     </tr>
 
     {{/each}}
