Register CK editor field

--- a/core_modules/frontend/templates/403.html
+++ b/core_modules/frontend/templates/403.html
@@ -31,6 +31,8 @@
 
       <p>You don't have permission to access this page.</p>
       
+      [[[file admin_include_jsonform]]]
+      
       [[[form login]]]
       
       <hr />
