--- a/core_modules/admin_ui/templates/admin_entity_create.html
+++ b/core_modules/admin_ui/templates/admin_entity_create.html
@@ -1,7 +1,25 @@
-[[[file admin_include_ckeditor]]] 
+[[[file admin_include_ckeditor]]] [[[file admin_include_jsonform]]]
 
-[[[file admin_include_jsonform]]]
+<h1>Create new {{type}}</h1> [[[form createEntity,{{type}}]]]
 
-<h1>Create new {{type}}</h1> 
+<script>
 
-[[[form createEntity,{{type}}]]]
+  $(document).ready(function() {
+
+    for (var i in CKEDITOR.instances) {
+
+      CKEDITOR.instances[i].on('change', function(e) {
+
+        console.log("hello");
+
+        var data = e.editor.getData();
+
+        $(e.editor.element)[0].$.innerHTML = data;
+
+      });
+
+    };
+
+  });
+
+</script>
