Add labels to default entity page

--- a/modules/page/templates/entity.html
+++ b/modules/page/templates/entity.html
@@ -1,3 +1,3 @@
 <ul>
-  {{#each current}} <li>{{this}}</li> {{/each}}
+  {{#each current}} <li><label>{{@key}}</label>: {{this}}</li> {{/each}}
 </ul>
