--- a/core_modules/admin_ui/templates/admin_wrapper.html
+++ b/core_modules/admin_ui/templates/admin_wrapper.html
@@ -15,7 +15,7 @@
 
   <!--- This is intended as a general wrapper for all admin pages. --->
 
-  [[[menu admin_toolbar]]]
+  [[[menu admin-toolbar]]]
   <section id="main">[[[MAINCONTENT]]]</section>
 
 </body>
