Permissions submit handler and move to JSON form

--- a/core_modules/admin_ui/static/admin.css
+++ b/core_modules/admin_ui/static/admin.css
@@ -135,3 +135,11 @@ tr#roles, thead tr {
 #entity-types ul a {
     white-space:nowrap;
 }
+
+.expandable > legend:before {
+  content: '\25B8';
+  padding-right: 5px;
+}
+.expanded > legend:before {
+  content: '\25BE';
+}
