--- a/core_modules/admin_ui/templates/admin_entity_create.html
+++ b/core_modules/admin_ui/templates/admin_entity_create.html
@@ -1,4 +1,4 @@
-[[[file admin_include_ckeditor]]] [[[file admin_include_jsonform]]]
+[[[file admin_include_ckeditor]]]
 
 <h1>Create new {{type}}</h1> [[[form createEntity,{{type}}]]]
 
