--- a/core_modules/admin_ui/templates/admin_entity_edit.html
+++ b/core_modules/admin_ui/templates/admin_entity_edit.html
@@ -1,3 +1,3 @@
-<h1>Edit new {{type}} {{eId}}</h1> 
+<h1>Edit new {{type}} {{eid}}</h1> 
 
-[[[form editEntity,{{type}},{{eId}}]]]
+[[[form editEntity,{{type}},{{eid}}]]]
