--- a/core_modules/admin_ui/templates/admin_restart.html
+++ b/core_modules/admin_ui/templates/admin_restart.html
@@ -1,5 +1,5 @@
 <h1>Restart</h1>
 
-<p>Push this button to restart the server!</p>
+<p class="restart-information">Push this button to restart the server!</p>
 
 [[[form restart]]]
