--- a/core_modules/admin_ui/templates/admin_logs.html
+++ b/core_modules/admin_ui/templates/admin_logs.html
@@ -1,60 +1,75 @@
-<!doctype HTML>
-<html>
+<h1>Logs</h1>
 
-<head>
+<style>
+  table {width:100%;}
+  td {
+    color: white;
+  }
+  /* Trace */
+  
+  .level10 {
+    background-color: azure !important;
+  }
+  /* Debug */
+  
+  .level20 {
+    background-color: grey !important;
+  }
+  /* Info */
+  
+  .level30 {
+    background-color: blue !important;
+  }
+  /* Warn */
+  
+  .level40 {
+    background-color: yellow !important;
+  }
+  /* Error */
+  
+  .level50 {
+    background-color: red !important;
+  }
+  /* Fatal */
+  
+  .level60 {
+    background-color: black!important;
+  }
 
-  <link rel="stylesheet" style="text/css" href="/modules/admin_ui/jsonform/deps/opt/bootstrap.css" />
-  <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
-  <script src="/modules/admin_ui/adminui.js"></script>
-  <script src="/modules/admin_ui/jquery.dynatable.js"></script>
-  <link rel="stylesheet" href="jquery.dynatable.css" />
+</style>
 
-  <style>
+<table>
+  <thead>
 
-    header {margin-bottom:10px;}
-    #logs {margin:auto; width:580px;}
-    #logs-table {background-color: #3D79BD;  padding:10px; color:white;}
-    #logs-table th {padding:10px;}
+    <tr>
 
-  </style>
+      {{#each keys}}
 
-  <script>
-    $.get("/api/logs", function(data, status) {
+      <th>{{this}}</th>
 
-      data = JSON.parse(data);
+      {{/each}}
 
-      $('#logs-table').dynatable({
-        dataset: {
-          records: data.response
-        }
-      });
+    </tr>
 
-    });
+  </thead>
 
-  </script>
+  {{#each logs}}
 
-</head>
+  <tr class="level{{this.level}}">
 
-<body>
+    {{#each this}}
 
-  <div id="logs">
+    <td>
 
-  <table id="logs-table">
-    <thead>
-      <th>name</th>
-      <th>hostname</th>
-      <th>pid</th>
-      <th>level</th>
-      <th>msg</th>
-      <th>time</th>
-      <th>v</th>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
+      {{this}}
 
-    </div>
+    </td>
 
-</body>
+    {{/each}}
 
-</html>
+  </tr>
+
+  {{/each}}
+
+
+</table>
