New logging colours

--- a/core_modules/admin_ui/templates/admin_logs.html
+++ b/core_modules/admin_ui/templates/admin_logs.html
@@ -3,37 +3,37 @@
 <style>
   table {width:100%;}
   td {
-    color: white;
+    color: black;
   }
   /* Trace */
-  
+
   .level10 {
-    background-color: azure !important;
+    background-color: #dfefff !important;
   }
   /* Debug */
-  
+
   .level20 {
-    background-color: grey !important;
+    background-color: #bdf !important;
   }
   /* Info */
-  
+
   .level30 {
-    background-color: blue !important;
+    background-color: #cf8 !important;
   }
   /* Warn */
-  
+
   .level40 {
-    background-color: yellow !important;
+    background-color: #FCFCA7 !important;
   }
   /* Error */
-  
+
   .level50 {
-    background-color: red !important;
+    background-color: #F8B5B5 !important;
   }
   /* Fatal */
-  
+
   .level60 {
-    background-color: black!important;
+    background-color: #e68865 !important;
   }
 
 </style>
