--- a/core_modules/admin_ui/static/admin_menu.css
+++ b/core_modules/admin_ui/static/admin_menu.css
@@ -1,3 +1,7 @@
+nav.menu-admin-toolbar {
+    position:relative;
+    z-index:3;
+}
 nav.menu-admin-toolbar .menu {
   width: 100%;
   background-color: black;
