--- a/core_modules/admin_ui/templates/admin_blockform.html
+++ b/core_modules/admin_ui/templates/admin_blockform.html
@@ -1,8 +1,13 @@
 {{#if blockid}}
 
+<h1>Editing {{blocktype}} {{blockid}}</h1>
+
 [[[form blockForm_{{blocktype}},{{blockid}}]]]
 
 {{else}}
+
+<h1>Creating new {{blocktype}}</h1>
+
 
 [[[form blockForm_{{blocktype}}]]]
 
