--- a/home/themes/base/templates/html.html
+++ b/home/themes/base/templates/html.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
     <script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/style.css">
+    <link rel="stylesheet" type="text/css" href="../theme/static/style.css">
     <link rel="shortcut icon" href="/static/favicon.png" type="image/x-icon">
   </head>
 
