Field permissions form on schema edit/create

--- a/iris_core/modules/core/admin_ui/templates/admin_schema_create.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema_create.html
@@ -99,6 +99,36 @@
           "properties": fields
         }
       }
+      
+      // Add in form presentation fields
+
+      if (schema.schema.fields.items) {
+
+        Object.keys(schema.schema.fields.items.properties).forEach(function(fieldName) {
+
+          if (fieldName !== "choose" && fieldName !== "object") {
+
+            schema.schema.fields.items.properties[fieldName].properties.canViewField.type = "checkboxbuttons";
+            schema.schema.fields.items.properties[fieldName].properties.canViewField.activeClass = "btn-success";
+
+            schema.schema.fields.items.properties[fieldName].properties.canEditField.type = "checkboxbuttons";
+            schema.schema.fields.items.properties[fieldName].properties.canEditField.activeClass = "btn-success";
+
+          }
+
+        })
+
+        schema.form.push({
+          key: "fields",
+          properties: schema.schema.fields
+        });
+
+        schema.form.push({
+          "type": "submit",
+          "title": "Save"
+        });
+
+      }
 
       $('form').jsonForm(schema);
 
@@ -111,10 +141,7 @@
 <script>
   var schema = {
     "schema": {},
-    "form": ["*", {
-      "type": "submit",
-      "title": "Submit"
-    }],
+    "form": [],
     onSubmit: function(errors, values) {
 
       if (errors) {
