--- a/iris_core/modules/core/admin_ui/templates/admin_schema_edit.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema_edit.html
@@ -100,11 +100,19 @@
 
           if (fieldName !== "choose" && fieldName !== "object") {
 
-            schema.schema.fields.items.properties[fieldName].properties.canViewField.type = "checkboxbuttons";
-            schema.schema.fields.items.properties[fieldName].properties.canViewField.activeClass = "btn-success";
+            if (schema.schema.fields.items.properties[fieldName].properties.canViewField) {
 
-            schema.schema.fields.items.properties[fieldName].properties.canEditField.type = "checkboxbuttons";
-            schema.schema.fields.items.properties[fieldName].properties.canEditField.activeClass = "btn-success";
+              schema.schema.fields.items.properties[fieldName].properties.canViewField.type = "checkboxbuttons";
+              schema.schema.fields.items.properties[fieldName].properties.canViewField.activeClass = "btn-success";
+
+            }
+
+            if (schema.schema.fields.items.properties[fieldName].properties.canEditField) {
+
+              schema.schema.fields.items.properties[fieldName].properties.canEditField.type = "checkboxbuttons";
+              schema.schema.fields.items.properties[fieldName].properties.canEditField.activeClass = "btn-success";
+
+            }
 
           }
 
