Put back entity name on schema create form

--- a/iris_core/modules/core/admin_ui/templates/admin_schema_create.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema_create.html
@@ -127,6 +127,11 @@
         })
 
         schema.form.push({
+          key: "entityname",
+          properties: schema.schema.entityname
+        });
+        
+        schema.form.push({
           key: "fields",
           properties: schema.schema.fields
         });
