--- a/iris_core/modules/extra/actions/templates/admin_actions_form.html
+++ b/iris_core/modules/extra/actions/templates/admin_actions_form.html
@@ -1,9 +1,7 @@
+{{#if action}}
+<h1>Edit action {{action}}</h1>
+[[[form actions,{{action}}]]]
+{{else}}
 <h1>Create new action</h1>
-<style>
-  
-  *[readonly] {
-    display: none;
-  }
-
-</style>
 [[[form actions]]]
+{{/if}}
