--- a/iris_core/modules/core/admin_ui/templates/admin_config.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_config.html
@@ -1,5 +1,14 @@
-<h1>Config</h1>
+<h1>Config</h1> {{#if clashes}}
 
+<h3>File clashes</h3>
 <ul>
-  {{#each configMenu.children}} <li><a href="{{this.path}}">{{this.title}}</a></li> {{/each}}
+  {{#each clashes}} <li>{{this.file}} <a href="/admin/config/diff?path={{this.file}}">View diff</a></li> {{/each}}
 </ul>
+
+{{/if}}
+
+<h3>Config export/import options</h3>
+
+  {{#each configMenu.children}}
+  <a class="btn btn-primary" href="{{this.path}}">{{this.title}}</a>
+  {{/each}}
