Minor capitalisation fix on config page

--- a/iris_core/modules/core/admin_ui/templates/admin_config.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_config.html
@@ -2,7 +2,7 @@
 
 <h3>File clashes</h3>
 <ul>
-  {{#each clashes}} <li>{{this.file}} <a href="/admin/config/diff?path={{this.file}}">View diff</a></li> {{/each}}
+  {{#each clashes}} <li>{{this.file}} <a href="/admin/config/diff?path={{this.file}}">(view diff)</a></li> {{/each}}
 </ul>
 
 {{/if}}
