--- a/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
@@ -1,6 +1,12 @@
 <!doctype html>
 
 <html>
+  
+{{#each iris_messages}}
+
+  {{this.message}}
+  
+{{/each}}
 
 <!-- CSS and JS common to all pages --->
 
