Prettier form validation errors

--- a/iris_core/modules/core/admin_ui/static/admin.css
+++ b/iris_core/modules/core/admin_ui/static/admin.css
@@ -154,3 +154,9 @@ thead tr {
   font-size: 100%;
   margin-left: 2px;
 }
+.form-errors {
+  background-color: #F8B5B5;
+  color: black;
+  padding: 10px;
+  margin-bottom: 10px;
+}
