--- a/iris_core/modules/extra/triggers/templates/admin_triggers_form.html
+++ b/iris_core/modules/extra/triggers/templates/admin_triggers_form.html
@@ -1,7 +1,7 @@
 {{#if action}}
-<h1>Edit action {{action}}</h1>
+<h1>Edit trigger {{action}}</h1>
 [[[form actions,{{action}}]]]
 {{else}}
-<h1>Create new action</h1>
+<h1>Create trigger action</h1>
 [[[form actions]]]
 {{/if}}
