Tidy up admin UI embeds

--- a/iris_core/modules/core/admin_ui/templates/admin_textformats.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_textformats.html
@@ -1,8 +1,8 @@
-<h1>Text formats</h1>
+<h1>Text filters</h1>
 
 <ul>
 
-  {{#each textformats}} <li>{{this.name}} - <a href="/admin/textformats/edit/{{this.name}}">edit</a> - <a href="/admin/textformats/delete/{{this.name}}">delete</a></li> {{/each}} 
+  {{#each textformats}} <li>{{this.name}} - <a href="/admin/textfilters/edit/{{this.name}}">edit</a> - <a href="/admin/textfilters/delete/{{this.name}}">delete</a></li> {{/each}} 
 </ul>
 
-<a class="btn btn-primary" href="/admin/textformats/create">Make new text format</a>
+<a class="btn btn-primary" href="/admin/textfilters/create">Make new text filter</a>
