--- a/iris_core/modules/core/admin_ui/templates/admin_textformats_form.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_textformats_form.html
@@ -2,6 +2,6 @@
 <h1>Edit {{formatname}}</h1>
 [[[form textformat,{{formatname}}]]]
 {{else}}
-<h1>Create new text format</h1>
+<h1>Create new text filter</h1>
 [[[form textformat]]]
 {{/if}}
