fix static urls in base theme

--- a/iris_core/themes/base/templates/html.html
+++ b/iris_core/themes/base/templates/html.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
     <script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../theme/static/style.css">
-    <link rel="shortcut icon" href="/static/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="/themes/base/style.css">
+    <link rel="shortcut icon" href="/themes/base/favicon.png" type="image/x-icon">
   </head>
 
   <body class="{{current.entityType}}-{{current.eid}}">
