--- a/iris_core/modules/core/admin_ui/static/admin_menu.css
+++ b/iris_core/modules/core/admin_ui/static/admin_menu.css
@@ -25,6 +25,22 @@ nav.menu-admin-toolbar .menu {
   padding: 5px;
   display: inline-block;
 }
+.menu-admin-toolbar ul.menu li ul.sub-menu {
+  min-width: 150px;
+}
+.menu-admin-toolbar ul.menu li ul.sub-menu li {
+  display: block;
+}
+.menu-admin-toolbar ul.menu li ul.sub-menu li a {
+  background-color: #585858;
+  display: block;
+}
+.menu-admin-toolbar ul.menu li ul.sub-menu li a:hover {
+  background-color: #6a6a6a;
+}
+.menu-admin-toolbar ul.menu li ul.sub-menu {
+  border-top: 1px solid black;
+}
 .menu-admin-toolbar ul.menu li {
   position: relative;
 }
