--- a/iris_core/modules/core/admin_ui/static/admin.css
+++ b/iris_core/modules/core/admin_ui/static/admin.css
@@ -86,6 +86,30 @@ thead tr {
   color: #fff;
 }
 
+.message {
+  margin-left: 20px;
+}
+
+.message.success:before {
+  content: "\2714";
+  margin-right: 10px;
+  background-color: #00aa00;
+  color: white;
+  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  padding-left: 4px;
+}
+
+#messages {
+  border: 1px solid darkgrey;
+  background: #ececec;
+  margin: 25px;
+  padding: 10px;
+  list-style-type: none;
+}
+
 /* Entities page */
 
 #entity-types {
