--- a/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
@@ -18,19 +18,7 @@
 
   <section id="main">
 
-    {{#if iris_messages}}
-
-    <ul id="messages">
-
-    {{#each iris_messages}}
-
-      <li class="message {{this.type}}">{{this.message}}</li>
-
-    {{/each}}
-
-    </ul>
-
-    {{/if}}
+  {{{iris_messages}}}
 
     [[[MAINCONTENT]]]
 
