--- a/iris_core/modules/core/admin_ui/static/admin.css
+++ b/iris_core/modules/core/admin_ui/static/admin.css
@@ -85,11 +85,11 @@ thead tr {
   text-align: left;
   color: #fff;
 }
-
 .iris-message {
   margin-left: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
-
 .iris-message.success:before {
   content: "\2714";
   margin-right: 10px;
@@ -101,7 +101,6 @@ thead tr {
   display: inline-block;
   padding-left: 4px;
 }
-
 .iris-message.status:before {
   content: "i";
   margin-right: 10px;
@@ -113,7 +112,6 @@ thead tr {
   display: inline-block;
   padding-left: 8px;
 }
-
 .iris-messages {
   border: 1px solid darkgrey;
   background: #ececec;
