--- a/iris_core/modules/core/frontend/templates/403.html
+++ b/iris_core/modules/core/frontend/templates/403.html
@@ -1,6 +1,8 @@
 <!doctype html>
 
 <html>
+  
+    {{{iris_tags "headTags"}}}
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
@@ -9,7 +11,7 @@
 <title>Iris</title>
 
 <body>
-
+  
   <style>
     .main-container {
       margin: 0 auto;
