--- a/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_wrapper.html
@@ -1,17 +1,18 @@
 <!doctype html>
 
 <html>
-
+  
 <!-- CSS and JS common to all pages --->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
 
-<script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
-<script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
+
+  {{{iris_tags "headTags"}}}
 
 <body>
-
+    
   <!--- This is intended as a general wrapper for all admin pages. --->
 
   [[[menu admin-toolbar]]]
