--- a/iris_core/themes/base/templates/html.html
+++ b/iris_core/themes/base/templates/html.html
@@ -3,21 +3,43 @@
   <head>
 
     <title>{{current.title}}</title>
+    {{{iris_tags "headTags"}}}
+      
+    {{#unless tags.headTags.jQuery}}
+        <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
+    {{/unless}}
+      
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
     <script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/themes/base/style.css">
     <link rel="shortcut icon" href="/themes/base/favicon.png" type="image/x-icon">
   </head>
 
   <body class="{{current.entityType}}-{{current.eid}}">
-      [[[menu admin-toolbar]]]
+      
+    [[[menu admin-toolbar]]]
 
-    [[[region header]]]
-
-    [[[MAINCONTENT]]]
+    <header id="page-header">
+        
+        [[[region header]]]
+        
+    </header>   
+      
+    <div id="content"> 
+        <div class="container">
+            
+            {{{iris_messages}}}
+            
+            [[[MAINCONTENT]]]
+            
+        </div>
+    </div>
   
-    [[[region footer]]]
+    <footer class="page-footer">
+        
+        [[[region footer]]]
+        
+    </footer>
 
   </body>
 
