--- a/iris_core/modules/core/user/templates/first_user.html
+++ b/iris_core/modules/core/user/templates/first_user.html
@@ -1,3 +1,4 @@
+{{{iris_tags "headTags"}}}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
 <link rel="stylesheet" href="/modules/admin_ui/admin_menu.css" />
