--- a/iris_core/themes/base/templates/html.html
+++ b/iris_core/themes/base/templates/html.html
@@ -35,7 +35,7 @@
         </div>
     </div>
   
-    <footer class="page-footer">
+    <footer id="page-footer">
         
         [[[region footer]]]
         
