Initial new entity type form

--- a/iris_core/modules/core/admin_ui/templates/admin_schema_create.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_schema_create.html
@@ -1,179 +1,3 @@
-[[[template admin_include_jsonform]]]
+<h1>Create new entity type</h1>
 
-
-<h1></h1>
-
-<form></form>
-
-<script>
-  $(document).ready(function() {
-
-    $.get("/admin/api/schema/fieldtypes", function(data) {
-
-      var fields = JSON.parse(data).response;
-
-      var select = "";
-
-      select += "<option>Pick an item</option>";
-
-      var i = 0;
-
-      $.each(fields, function(index, element) {
-
-        if (index !== "choose") {
-
-          var title;
-
-          if (element.properties.fieldTypeName) {
-
-            title = element.properties.fieldTypeName.title;
-
-          } else {
-
-            title = index;
-
-          }
-
-          fields.object.properties.subfields.items.properties[index] = JSON.parse(JSON.stringify(element));
-          select += "<option value='" + i + "'>" + title + "</option>";
-
-          i += 1;
-
-        }
-
-      });
-
-      JSONForm.elementTypes['choose'] = Object.create(JSONForm.elementTypes['text']);
-
-      JSONForm.elementTypes['choose'].template = '<select value="<%= escape(value) %>" name="<%= node.name %>" onchange="chooseField(event)" class="field-collection-select form-control">' + select + '</select>';
-
-      JSONForm.elementTypes['choose'].onInsert = function(e, node) {
-
-        if (node.value) {
-
-          var choice = node.value;
-
-          $("select[name='" + node.name + "']").val(choice);
-
-          var parent = $("select[name='" + node.name + "']").closest("fieldset")
-          $(parent).children("fieldset").hide();
-          $(parent).children("fieldset").find("*[name]").attr("disabled", "true");
-          $(parent).find("fieldset").eq(choice).show().find("*[name]").removeAttr("disabled");
-
-        } else {
-
-          $("select[name='" + node.name + "']").closest("fieldset").children("fieldset").hide();
-
-        }
-
-      };
-
-      window.chooseField = function(e) {
-
-        var choice = e.target.value;
-
-        var parent = $(e.target).closest("fieldset");
-
-        $(parent).children("fieldset").hide();
-        $(parent).find("fieldset").find("*[name]").attr("disabled", "true");
-
-        $(parent).find("fieldset").eq(choice).show().find("*[name]").removeAttr("disabled");
-
-      };
-
-      schema.schema.entityname = {
-        "type": "string",
-        "title": "Entity name",
-        "description": "The name of this entity. This cannot be changed.",
-        "required": true
-      }
-
-      schema.schema.fields = {
-
-        "type": "array",
-        "title": "Fields",
-        "description": "Fields on this entity type",
-        "required": true,
-        "items": {
-          type: "object",
-          "properties": fields
-        }
-      }
-
-      // Add in form presentation fields
-
-      if (schema.schema.fields.items) {
-
-        Object.keys(schema.schema.fields.items.properties).forEach(function(fieldName) {
-
-          if (fieldName !== "choose" && fieldName !== "object") {
-
-            if (schema.schema.fields.items.properties[fieldName].properties.canViewField) {
-
-              schema.schema.fields.items.properties[fieldName].properties.canViewField.type = "checkboxbuttons";
-              schema.schema.fields.items.properties[fieldName].properties.canViewField.activeClass = "btn-success";
-
-            }
-
-            if (schema.schema.fields.items.properties[fieldName].properties.canEditField) {
-
-              schema.schema.fields.items.properties[fieldName].properties.canEditField.type = "checkboxbuttons";
-              schema.schema.fields.items.properties[fieldName].properties.canEditField.activeClass = "btn-success";
-
-            }
-
-          }
-
-        })
-
-        schema.form.push({
-          key: "entityname",
-          properties: schema.schema.entityname
-        });
-        
-        schema.form.push({
-          key: "fields",
-          properties: schema.schema.fields
-        });
-
-        schema.form.push({
-          "type": "submit",
-          "title": "Save"
-        });
-
-      }
-
-      $('form').jsonForm(schema);
-
-    });
-
-  });
-
-</script>
-
-<script>
-  var schema = {
-    "schema": {},
-    "form": [],
-    onSubmit: function(errors, values) {
-
-      if (errors) {
-        console.error(errors);
-      } else {
-
-
-        $.post("/admin/api/schema/save/new", values, function(data, status) {
-
-          if (status === "success") {
-
-            document.location.href = "/admin/entities";
-
-          };
-
-        });
-
-      }
-    }
-  }
-
-</script>
+[[[form schema]]]
