roles_ui module and general user restructure

--- a/iris_core/modules/core/admin_ui/templates/admin_entitylist.html
+++ b/iris_core/modules/core/admin_ui/templates/admin_entitylist.html
@@ -16,7 +16,7 @@
 
     <tr>
       <td>{{#if path}}<a href="{{path}}">{{eid}}</a>{{else}}{{eid}}{{/if}}</td>
-      <td>{{title}}</td>
+      <td>{{username}}{{title}}</td>
       <td><a href="/admin/edit/{{ entityType }}/{{ eid }}">Edit</a></td>
       <td><a href="/admin/delete/{{ entityType }}/{{ eid }}">Delete</a></td>
     </tr>
